--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '2.0.21'
 }
+plugins {
+    application
+    id("com.github.johnrengelman.shadow") version "8.1.1"
+}
+
 
 group = 'iesra.dawb.seguros'
 version = '1.0-SNAPSHOT'
@@ -18,4 +23,19 @@ test {
 }
 kotlin {
     jvmToolchain(21)
+}
+application {
+    mainClass.set("es.prog2425.calcbasica.MainKt")
+}
+
+tasks.test {
+    useJUnitPlatform()
+}
+
+tasks.named<com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar>("shadowJar") {
+    archiveBaseName.set("GestionSeguros")    // Nombre personalizado
+    archiveVersion.set("1.0")                // Versión
+    archiveClassifier.set("")                // Sin sufijo -all
+    mergeServiceFiles()
+    exclude("META-INF/*.SF", "META-INF/*.DSA", "META-INF/*.RSA") // Evita errores de firma
 }
